# yandex-map-marks

./: .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
points/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
points/migrations/: 0001_initial.py  0002_alter_point_latitude_alter_point_longitude.py
points/templates/points/: map_edit.html  map_root.html  map_share.html
ymap_points/: asgi.py  settings.py  urls.py  wsgi.py
